--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "express-jwt": "^6.1.0",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.3"
   },
